@@ -4,6 +4,7 @@ AS OF SVN REV. 5091, WE ARE NOW USING TRUNK.  ALL UNTESTED BUGFIXES/FEATURES GO 
 IF YOU HAVE A WORKING AND TESTED BUGFIX PUT IT INTO STABLE AS WELL AS TRUNK.
 
 2006/08/19
+	* Fixed HLIF_CHANGE [Toms]
 	* Updated HLIF_BRAIN skill [Toms]
 	* Fixed homunculus intimacy on feeding [Toms]
 	* Added homunculus_friendly_rate battle config [Toms]
